--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Traditionally `k=1.5`, or `k=3` for _extreme outliers_]
 ]
 
 
----
+<!-- ---
 class: middle
 
 .left-column[
@@ -300,7 +300,7 @@ class: middle
 * Comparison between the local densities of a data point with the local densisties of its neighbors
 
 * Points with substantially lower density than their neighbors may be identified as outliers
-]
+] -->
 
 ---
 
@@ -414,6 +414,7 @@ class: middle
 class: center, middle
 
 ## slides at https://github.com/sereprz/from-hot-mess-to-information
+## notebook at https://github.com/sereprz/mental-health-in-tech
 
 ---
 
