--- a/index.html
+++ b/index.html
@@ -139,15 +139,13 @@ State of completeness, consistency, timeliness, duplication and accuracy that ma
 
 class: middle
 
-# Data Cleaning and Wrangling
+# Pre-processing
 
 * Spotting inconsistencies
 
 * Outliers
 
 * Missing Data
-
-* Process and best practices
 
 ---
 class: middle
@@ -365,17 +363,7 @@ class: middle
 
 class: middle
 
-.left-column[
-### Spotting inconsistencies
-
-### Outliers
-
-### Missing Data
-
-### Process and best practices
-]
-
-.right-column[
+# Process and best practices
 
 **Inspection**<br>
 Detect unexpected, incorrect, and inconsistent data (Data profiling and Visualization)
@@ -392,8 +380,6 @@ Keep a log of the inconsistencies and errors found and how they were addressed
 Make sure every step is documented and reproducible
 
 Avoid manual edits!
-
-]
 
 ---
 
